Fix bugs with different colors in dark mode

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -8,6 +8,7 @@ html,
 #root {
   display: flex;
   min-height: 100vh;
+  max-height: 100vh;
   width: 100%;
   flex: 1;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
